--- a/responsive-menu/style.css
+++ b/responsive-menu/style.css
@@ -21,24 +21,41 @@
 }
 
 @media screen and (max-width: 768px) {
-  .header nav {
-    display: none;
-    background: rgba(54, 54, 54, 0.7);
-    width: 100vw;
-    height: 100vh;
+  body {
+    font-size: 3vmax;
   }
 
-  #trigger:checked + nav {
+  .header nav {
+    display: none;
+    /* а так можно тоько в одном месте бекграунд задать - не не работает в IE < 10 */
+    /* background: linear-gradient(90deg, rgba(255,255,255,1) 35vw, rgba(54,54,54,0.7) 35vw); */
+    width: 100vw;
+  }
+
+  #trigger:checked + .header nav {
     display: block;
+    height: calc(100vh - 60px);
+
+  }
+
+  #trigger:checked + .header + .container {
+    position: fixed;
+    overflow: hidden;
+    background: rgba(54, 54, 54, 0.7);
   }
   
   .header ul {
-    position: absolute;
-    height: 100vh;
-    width: 25%;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    width: 25vw;
+    height: 100%;
     background: #fff;
-    margin: 0px;
-    padding: 60px 20px;
+    margin: 60px 0px 0px;
+    padding: 0px 0px 0px 20px;
+  }
+
+  .header ul li:first-child {
+    /* margin-top:60px; */
   }
 
   .header ul li {
@@ -110,7 +127,7 @@
 
 #menu-btn {
   position: fixed;
-  top: 22px;
+  top: 18px;
   left: 10px;
   z-index: 20;
   width: 20px;
